Change to tall for demo

--- a/plugin-apache/files/default/status.conf
+++ b/plugin-apache/files/default/status.conf
@@ -8,11 +8,7 @@
 <Location /server-status>
     SetHandler server-status
     Order deny,allow
-    Deny from all
-    Allow from localhost ip6-localhost
-    Allow from mon-1.truesightpulse.com
-    Allow from mon-2.truesightpulse.com
-    Allow from mon-3.truesightpulse.com
+    Allow from all
 </Location>
 
 ExtendedStatus On
